# editorconfig-core-c

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  CONTRIBUTING  CONTRIBUTORS  INSTALL  INSTALL.md  LICENSE  README.md  SECURITY.md  appveyor.yml  build.ps1  cmake_uninstall.cmake.in  editorconfig.c  fnmatch.c  init.ps1  mk-src-archive.sh  patch.ps1  test.ps1
.github/workflows/: CI_build.yml
CMake_Modules/: FindPCRE2.cmake
doc/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Doxyfile_cmd.in
doc/html/c-api/: annotated.html  classes.html  editorconfig_8h.html  editorconfig_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  navtree.js  structeditorconfig__name__value.html  structeditorconfig__parsing__info.html  structeditorconfig__parsing__out.html
doc/html/c-api/search/: all_65.html  all_6e.html  classes_65.html  files_65.html  functions_65.html  search.js  variables_63.html  variables_65.html  variables_76.html
doc/man/man3/: editorconfig.h.3  editorconfig_init_parsing_info.3  editorconfig_name_value.3  editorconfig_parsing_info.3  editorconfig_parsing_out.3
include/: CMakeLists.txt  util.h
include/editorconfig/: editorconfig.h  editorconfig_handle.h
man/: CMakeLists.txt
man/man3/: editorconfig.h.3  editorconfig_name_value.3  editorconfig_parsing_out.3
src/: CMakeLists.txt  config.h.in  editorconfig.c  editorconfig.h  editorconfig.h.in  fnmatch.c  fnmatch.h  global.h  ini.c  ini.h  main.c  misc.c  misc.h
src/doc/: Doxyfile
src/include/: CMakeLists.txt
src/include/editorconfig/: editorconfig.h
src/lib/: .gitignore  CMakeLists.txt  EditorConfigConfig.cmake.in  ec_fnmatch.c  ec_fnmatch.h  ec_glob.c  ec_glob.h  editorconfig.c  editorconfig.h  editorconfig.pc.in  editorconfig_handle.c  editorconfig_handle.h  fnmatch.c  fnmatch.h  global.h  ini.c  ini.h  misc.c  misc.h
test/: CMakeLists.txt
test/test_glob/: CMakeLists.txt  test_brackets.in  test_question.in  test_star.in
test_exclude/: .editorconfig
tests/: CMakeLists.txt
tests/filetree/: CMakeLists.txt  parent_directory.in  path_separator.in  root_file.in
tests/filetree/parent_directory/: parent_directory.in
tests/glob/: CMakeLists.txt  brackets.in  ne_brackets.in  star.in  star_star.in
tests/parser/: CMakeLists.txt  comments.in  whitespace.in
tests/properties/: CMakeLists.txt  end_of_line.in  indent_size_default.in  lowercase_names.in  lowercase_values.in  tab_width_default.in  test_tab_width_default.in
tests/test_glob/: CMakeLists.txt
tests/test_properties/: CMakeLists.txt
